[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
path = "src/lib.rs"

[[bin]]
name = "rust_core"
path = "src/main.rs"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2.0.12"
env_logger = "0.11.8"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
dashmap = "6.1.0"
num_cpus = "1.13"
fxhash = "0.2"
pcap = "2.2.0"
once_cell = "1.8"
bytes = "1.4"
async-trait = "0.1"
crossbeam = "0.8"
rayon = "1.7"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.1"

[[bench]]
name = "decode_benchmark"
harness = false

[build-dependencies]
cc = "1.0"
bindgen = "0.71.1"

